test/assets/invalid/if/else-expect-string.hs
a :: String
a = if True then "World" else '.'